<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.reverse.vcsathya.reversestring.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/side_nav_bar"
        android:gravity="top"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:id="@+id/linearLayout"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Display1"
            android:text="@string/title"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:inputType="text"
            android:hint="@string/first_name_hint"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            android:hint="@string/last_name_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/reversed_first_name_hint"
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:id="@+id/reversedFirstName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/reversed_last_name_hint"
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:id="@+id/reversedLastName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/colorError"
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:id="@+id/errorFirstName"
            android:text="@string/first_name_error"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/colorError"
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:id="@+id/errorLastName"
            android:text="@string/last_name_error"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/colorError"
            style="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:id="@+id/errorSpecialChars"
            android:text="@string/special_chars_error"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
